--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
               </div>
             </div>
 
-            <div id="events">
+            <div>
               <p class="events__description" id="events-description">
                 En este evento, en el que celebramos el nombre de nuestra
                 biblioteca, nuestra invitada nos llevará a través de un viaje
@@ -334,7 +334,7 @@
                   <li class="footer__list-item" id="footer-list-item">
                     <p>Lunes a viernes: 9 a.m. -- 8 p.m.</p>
                   </li>
-                  <li class="footer__list-item" id="footer-list-item">
+                  <li class="footer__list-item">
                     <p>Sábados y domingos: 10 a.m. -- 6 p.m.</p>
                   </li>
                 </ul>
@@ -345,7 +345,7 @@
               >
                 <h3 class="footer__column-heading">Redes sociales</h3>
                 <ul class="footer__list">
-                  <li class="footer__list-item" id="footer-list-item">
+                  <li class="footer__list-item">
                     <p class="footer__column-link">
                       <img
                         src="./images/facebook_white.svg"
