--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                       Facebook
                     </p>
                   </li>
-                  <li class="footer__list-item" id="footer-list-item">
+                  <li class="footer__list-item">
                     <p id="footer-column-link" class="footer__column-link">
                       <img
                         src="images/instagram_white.svg"
