--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </li>
 
             <li>
-              <a class="nav__link" href="#footer-social-item">Contactos</a>
+              <a class="nav__link" href="#footer">Contactos</a>
             </li>
           </ul>
         </nav>
@@ -162,14 +162,12 @@
         </section>
 
         <section class="events" id="events">
-          <div class="events__content" id="events-content">
-            <h2 class="events__heading" id="events-heading">
-              Próximos eventos:
-            </h2>
-            <h3 class="events__title" id="events-title">
+          <div class="events__content">
+            <h2 class="events__heading">Próximos eventos:</h2>
+            <h3 class="events__title">
               En honor de Joan Feynman: mujeres en la astrofísica
             </h3>
-            <div class="event-info events__info-section" id="event-info">
+            <div class="event-info events__info-section">
               <div class="event-info__item">
                 <img
                   src="./images/icon_calendar.svg"
@@ -178,20 +176,20 @@
                 />
                 <p class="event-info__text">Lunes 12 de enero</p>
               </div>
-              <div class="event-info__item" id="event-info-item">
+              <div class="event-info__item">
                 <img
                   src="./images/icon_pin.svg"
                   alt="Pin icon"
                   class="event-info__icon"
                 />
-                <p class="event-info__text" id="event-info-text">
+                <p class="event-info__text">
                   Sala de conferencias y virtual de la biblioteca Triple Peaks
                 </p>
               </div>
             </div>
 
             <div>
-              <p class="events__description" id="events-description">
+              <p class="events__description">
                 En este evento, en el que celebramos el nombre de nuestra
                 biblioteca, nuestra invitada nos llevará a través de un viaje
                 para conocer a algunas de las mujeres investigadoras más
@@ -203,7 +201,7 @@
               <a href="#" class="events__more"> Más eventos &rarr; </a>
             </div>
           </div>
-          <div class="events__cover" id="events-cover">
+          <div class="events__cover">
             <img
               src="./images/cafe.png"
               alt="Cafe"
@@ -251,130 +249,124 @@
             </div>
           </div>
         </section>
+
+        <section class="membership" id="membership">
+          <h2 class="membership__title">
+            ¡Convertirse en miembro es muy fácil!
+          </h2>
+          <ul class="membership__steps">
+            <li class="step">
+              <h3 class="step__title">
+                Paso 1
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Completa el formulario de afiliación en línea o en persona.
+              </p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 2
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Ven y recoge tu credencial de la biblioteca en la recepción.
+              </p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 3
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">Firma el envés de la tarjeta.</p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 4
+                <img
+                  src="./images/icon_step_finish.svg"
+                  alt="icon finish"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                ¡Disfruta de los increíbles beneficios de nuestra membresía!
+              </p>
+            </li>
+          </ul>
+        </section>
       </main>
 
-      <section>
-        <footer class="footer">
-          <section class="membership" id="membership">
-            <h2 class="membership__title" id="membership-title">
-              ¡Convertirse en miembro es muy fácil!
-            </h2>
-            <ul class="membership__steps" id="membership-steps">
-              <li class="step">
-                <h3 class="step__title">
-                  Paso 1
+      <footer id="footer" class="footer">
+        <div id="footer-columns" class="footer__columns">
+          <div id="footer-column" class="footer__column footer">
+            <img
+              src="./images/logo.svg"
+              alt="Logo"
+              class="footer__logo"
+              id="footer-logo"
+            />
+          </div>
+          <div
+            class="footer__column footer__column_content_hours"
+            id="footer-column-content-hours"
+          >
+            <h3 id="foooter-column-heading" class="footer__column-heading">
+              Horario de apertura
+            </h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <p>Lunes a viernes: 9 a.m. -- 8 p.m.</p>
+              </li>
+              <li class="footer__list-item">
+                <p>Sábados y domingos: 10 a.m. -- 6 p.m.</p>
+              </li>
+            </ul>
+          </div>
+          <div
+            id="footer-column-content-social"
+            class="footer__column footer__column_content_social"
+          >
+            <h3 class="footer__column-heading">Redes sociales</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <p class="footer__column-link">
                   <img
-                    src="./images/icon_step_forward.svg"
-                    alt="icon forward"
-                    class="step__icon"
+                    src="./images/facebook_white.svg"
+                    alt="Facebook"
+                    class="footer__social-icon"
+                    id="footer-social-icon"
                   />
-                </h3>
-                <p class="step__description">
-                  Completa el formulario de afiliación en línea o en persona.
+                  Facebook
                 </p>
               </li>
-              <li class="step">
-                <h3 class="step__title">
-                  Paso 2
+              <li class="footer__list-item">
+                <p class="footer__column-link">
                   <img
-                    src="./images/icon_step_forward.svg"
-                    alt="icon forward"
-                    class="step__icon"
+                    src="images/instagram_white.svg"
+                    alt="Instagram"
+                    class="footer__social-icon"
                   />
-                </h3>
-                <p class="step__description">
-                  Ven y recoge tu credencial de la biblioteca en la recepción.
-                </p>
-              </li>
-              <li class="step">
-                <h3 class="step__title">
-                  Paso 3
-                  <img
-                    src="./images/icon_step_forward.svg"
-                    alt="icon forward"
-                    class="step__icon"
-                  />
-                </h3>
-                <p class="step__description">Firma el envés de la tarjeta.</p>
-              </li>
-              <li class="step">
-                <h3 class="step__title">
-                  Paso 4
-                  <img
-                    src="./images/icon_step_finish.svg"
-                    alt="icon finish"
-                    class="step__icon"
-                  />
-                </h3>
-                <p class="step__description">
-                  ¡Disfruta de los increíbles beneficios de nuestra membresía!
+                  Instagram
                 </p>
               </li>
             </ul>
-          </section>
-
-          <section id="footer" class="footer">
-            <div id="footer-columns" class="footer__columns">
-              <div id="footer-column" class="footer__column footer">
-                <img
-                  src="./images/logo.svg"
-                  alt="Logo"
-                  class="footer__logo"
-                  id="footer-logo"
-                />
-              </div>
-              <div
-                class="footer__column footer__column_content_hours"
-                id="footer-column-content-hours"
-              >
-                <h3 id="foooter-column-heading" class="footer__column-heading">
-                  Horario de apertura
-                </h3>
-                <ul class="footer__list" id="footer-list">
-                  <li class="footer__list-item" id="footer-list-item">
-                    <p>Lunes a viernes: 9 a.m. -- 8 p.m.</p>
-                  </li>
-                  <li class="footer__list-item">
-                    <p>Sábados y domingos: 10 a.m. -- 6 p.m.</p>
-                  </li>
-                </ul>
-              </div>
-              <div
-                id="footer-column-content-social"
-                class="footer__column footer__column_content_social"
-              >
-                <h3 class="footer__column-heading">Redes sociales</h3>
-                <ul class="footer__list">
-                  <li class="footer__list-item">
-                    <p class="footer__column-link">
-                      <img
-                        src="./images/facebook_white.svg"
-                        alt="Facebook"
-                        class="footer__social-icon"
-                        id="footer-social-icon"
-                      />
-                      Facebook
-                    </p>
-                  </li>
-                  <li class="footer__list-item">
-                    <p id="footer-column-link" class="footer__column-link">
-                      <img
-                        src="images/instagram_white.svg"
-                        alt="Instagram"
-                        class="footer__social-icon"
-                      />
-                      Instagram
-                    </p>
-                  </li>
-                </ul>
-                <p class="footer__copyright" id="footer-copyright">
-                  © 2024 Fernanda Vega
-                </p>
-              </div>
-            </div>
-          </section>
-        </footer>
-      </section>
+            <p class="footer__copyright">© 2024 Fernanda Vega</p>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
