Actualización de mi proyecto

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
       <footer id="footer" class="footer">
         <div id="footer-columns" class="footer__columns">
-          <div id="footer-column" class="footer__column footer">
+          <div id="footer-column" class="footer__column">
             <img
               src="./images/logo.svg"
               alt="Logo"
@@ -363,9 +363,9 @@
                 </p>
               </li>
             </ul>
-            <p class="footer__copyright">© 2024 Fernanda Vega</p>
           </div>
         </div>
+        <p class="footer__copyright">© 2024 Fernanda Vega</p>
       </footer>
     </div>
   </body>
