Actualización de mi proyecto

--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
                     alt="Facebook"
                     class="footer__social-icon"
                     id="footer-social-icon"
+                    href="#"
                   />
                   Facebook
                 </p>
@@ -358,6 +359,7 @@
                     src="images/instagram_white.svg"
                     alt="Instagram"
                     class="footer__social-icon"
+                    href="#"
                   />
                   Instagram
                 </p>
