Actualización de mi proyecto

--- a/index.html
+++ b/index.html
@@ -342,24 +342,22 @@
             <h3 class="footer__column-heading">Redes sociales</h3>
             <ul class="footer__list">
               <li class="footer__list-item">
-                <p class="footer__column-link">
+                <p class="footer__column-link" href="#">
                   <img
                     src="./images/facebook_white.svg"
                     alt="Facebook"
                     class="footer__social-icon"
                     id="footer-social-icon"
-                    href="#"
                   />
                   Facebook
                 </p>
               </li>
               <li class="footer__list-item">
-                <p class="footer__column-link">
+                <p class="footer__column-link" href="#">
                   <img
                     src="images/instagram_white.svg"
                     alt="Instagram"
                     class="footer__social-icon"
-                    href="#"
                   />
                   Instagram
                 </p>
