Actualización de mi proyecto

--- a/index.html
+++ b/index.html
@@ -338,11 +338,12 @@
           <div
             id="footer-column-content-social"
             class="footer__column footer__column_content_social"
+            href="#"
           >
             <h3 class="footer__column-heading">Redes sociales</h3>
             <ul class="footer__list">
               <li class="footer__list-item">
-                <p class="footer__column-link" href="#">
+                <p class="footer__column-link">
                   <img
                     src="./images/facebook_white.svg"
                     alt="Facebook"
@@ -353,7 +354,7 @@
                 </p>
               </li>
               <li class="footer__list-item">
-                <p class="footer__column-link" href="#">
+                <p class="footer__column-link">
                   <img
                     src="images/instagram_white.svg"
                     alt="Instagram"
