Acutalización de mi proyecto

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
           <div
             id="footer-column-content-social"
             class="footer__column footer__column_content_social"
-            href="#"
+            href="#footer__social-icon"
           >
             <h3 class="footer__column-heading">Redes sociales</h3>
             <ul class="footer__list">
