Actualización de mi proyecto

--- a/index.html
+++ b/index.html
@@ -338,7 +338,6 @@
           <div
             id="footer-column-content-social"
             class="footer__column footer__column_content_social"
-            href="#footer__social-icon"
           >
             <h3 class="footer__column-heading">Redes sociales</h3>
             <ul class="footer__list">
@@ -351,6 +350,7 @@
                     id="footer-social-icon"
                   />
                   Facebook
+                  <a href="#"></a>
                 </p>
               </li>
               <li class="footer__list-item">
@@ -361,6 +361,7 @@
                     class="footer__social-icon"
                   />
                   Instagram
+                  <a href="#"></a>
                 </p>
               </li>
             </ul>
