Actualización de mi proyecto

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="es">
+  /!-- No encontré ningún comentario, ni en HTML o en el CSS --!/
   <head>
     <meta charset="UTF-8" />
 
